<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@android:color/background_dark">



         <TextView
             style="@style/TextViewTop"
             android:text="@string/tvNameOne"
             android:layout_gravity="left"

             />

         <TextView
             style="@style/TextViewTop"
             android:text="@string/tvNameTwo"
             android:layout_alignParentTop="true"
             android:layout_centerInParent="true"

             />

         <TextView
             style="@style/TextViewTop"
             android:text="@string/tvNameThree"
             android:layout_gravity="right"
             android:layout_alignParentRight="true"
             />

    <TextView
        android:id="@+id/tv4"
        style="@style/TextViewMiddle"
        android:text="@string/tvNameFive"
        android:layout_gravity="right"
        android:layout_centerInParent="true"
        />

    <TextView

        style="@style/TextViewMiddle"
        android:text="@string/tvNameFour"
        android:layout_marginRight="20dp"
        android:layout_centerInParent="true"
        android:layout_toLeftOf="@+id/tv4"


        />


    <TextView
        style="@style/TextViewMiddle"
        android:text="@string/tvNameSix"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/tv4"

        />

    <TextView
        style="@style/TextViewBottom"
        android:text="@string/tvNameSeven"
        android:layout_centerInParent="true"
       android:layout_above="@+id/tv8"

        />

    <TextView
        style="@style/TextViewEnd"
        android:id="@+id/tv8"
        android:text="@string/tvNameEight"
        android:layout_alignParentBottom="true"


        />



</RelativeLayout>